--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 body{
   /*background: linear-gradient(to right,#314455,#C96567,#97AABD);*/
-  background-color: #6F2232;
+  background-color: #FFF;
 
 }
 .center{
